modify init settings for secure connection, modify ui components

--- a/VirtualWorld/Assets/Config/GameConfig.json
+++ b/VirtualWorld/Assets/Config/GameConfig.json
@@ -2,7 +2,6 @@
   "ipForClient": "192.168.56.1",
   "ipForServer": "0.0.0.0",
   "serverPort": "7000",
-  "httpUrl": "http://localhost",
-  "webSocketUrl": "ws://localhost",
-  "backendPort": "3001"
+  "httpUrl": "http://localhost:3001",
+  "webSocketUrl": "ws://localhost:3001"
 }
