--- a/VirtualWorld/Assets/FishNet/Runtime/FishNet.Runtime.asmdef
+++ b/VirtualWorld/Assets/FishNet/Runtime/FishNet.Runtime.asmdef
@@ -1,8 +1,10 @@
 {
     "name": "FishNet.Runtime",
+    "rootNamespace": "",
     "references": [
         "GUID:894a6cc6ed5cd2645bb542978cbed6a9",
-        "GUID:17013b2a21298c14ea4808251346a38a"
+        "GUID:17013b2a21298c14ea4808251346a38a",
+        "GUID:958a0e3a6747743608e45e8b9a7c13b4"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
