--- a/VirtualWorld/Packages/manifest.json
+++ b/VirtualWorld/Packages/manifest.json
@@ -18,6 +18,7 @@
     "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.6",
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.8.0",
+    "com.unity.webrtc": "https://github.com/Unity-Technologies/com.unity.webrtc.git#3.0.0-pre.5",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
